--- a/manifests/hascheduler.yaml
+++ b/manifests/hascheduler.yaml
@@ -19,7 +19,7 @@ spec:
             - name: REDIS_ADDR
               value: "redis:6379"
             - name: MONGO_URI
-              value: "mongodb://mongo:27017"
+              value: "mongodb://mongo:27017/?connect=direct"
           ports:
             - containerPort: 8080 # Assuming your Go app exposes port 8080
           readinessProbe: #important for correct scaling and health checks
